--- a/src/main/resources/templates/scheduler.html
+++ b/src/main/resources/templates/scheduler.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/layout}">
 <head>
     <title>Scheduler</title>
+    <script src="../static/common.js"></script>
     <script src="../static/scheduler.js"></script>
 </head>
 <body>
